# rpi-gpib

./: .gitignore  .gitmodules
board/: .gitignore  README.md  fp-lib-table  local.dcm  local.kicad_sym  local.lib  rpi-gpib-hat-cache.lib  rpi-gpib-hat.kicad_pcb  rpi-gpib-hat.pro  rpi-gpib-hat.sch  sch_frame.kicad_wks
board/gpib-breakout/: fp-lib-table  gpib-breakout.kicad_pcb  gpib-breakout.kicad_prl  gpib-breakout.kicad_pro  gpib-breakout.kicad_sch
board/local.3dshapes/: Amphenol_10118194_xx1xLF.step
board/local.pretty/: MountingHole_2.7mm_M2.5_uHAT.kicad_mod  MountingHole_RPi_HAT.kicad_mod  NorComp_111-024-113L001.kicad_mod  NorComp_111-024-113L001_NoScrews.kicad_mod  NorComp_111-024-213L001.kicad_mod  NorComp_111-024-213L001_NoScrews.kicad_mod  NorComp_112-024-113R001.kicad_mod  OSHW.kicad_mod  PinSocket_2x20_P2.54mm_Vertical_Centered_Anchor.kicad_mod  RP2040-QFN-56.kicad_mod
board/pico-gpib/: fp-lib-table  pico-gpib-bus.sch  pico-gpib-cache.lib  pico-gpib.kicad_pcb  pico-gpib.pro  pico-gpib.sch  sym-lib-table
board/rpi-gpib-pico/: bus.kicad_sch  bus.sch  rpi-gpib-pico.kicad_pcb  rpi-gpib-pico.kicad_prl  rpi-gpib-pico.kicad_pro  rpi-gpib-pico.kicad_sch  sym-lib-table
board/rpi-gpib-uhat/: fp-lib-table  rpi-gpib-uhat-cache.lib  rpi-gpib-uhat.kicad_pcb  rpi-gpib-uhat.kicad_prl  rpi-gpib-uhat.kicad_pro  rpi-gpib-uhat.kicad_sch
firmware/pico/: CMakeLists.txt  openocd.cfg
firmware/pico/src/: counter.pio  main.c
